# IfcPL

./: .clang-format  .hgignore  Readme.md
Framework/: Core.cpp  Core.h  IArbitraryTransitionCurve.h  IFCPLArray.h  IfcPLException.h  IfcPLMath.cpp  IfcPLMath.h  IfcPLString.cpp  IfcPLString.h  OpenInfraPlatfomIfcPL.h
Framework/CMake/: CreateEngineUnitTest.cmake  FindGLEW.cmake  FindGTest.cmake  FindTinyXML2.cmake  ProjectVersion.cmake  QtCopyBinaries.cmake
Grammar/: Grammar.tex
Transpiler/: CMakeLists.txt
Transpiler/src/OpenInfraPlatform/IfcPL/: SymbolTable.cpp  SymbolTable.h  main.cpp  namespace.h  node.cpp  node.h  parser.y  tokens.l
examples/: Abutment.ifcpl  ArrayExample.ifcpl  Casting.ifcpl  Clothoid.ifcpl  Dog.ifcpl  Echo.ifcpl  EnergySimulation.ifcpl  Factorial.ifcpl  HelloWorld.ifcpl  IArbitraryTransitionCurve.ifcpl  IFC4X1.exp  IParametricProfileDescripton.ifcpl  IShapeProfile.ifcpl  ImportedTypes.ifcpl  Line.ifcpl  OperatorOverloading.ifcpl  PrimitiveVariableTypes.ifcpl  RALChecker.ifcpl  ReferenceTypes.ifcpl  TrafficLight.ifcpl  TuringMachineSimulator.ifcpl  Vector4d.ifcpl  compile_Abutment.cmd  compile_ArrayExample.cmd  compile_Casting.cmd  compile_Clothoid.cmd  compile_Dog.cmd  compile_Echo.cmd  compile_Factorial.cmd  compile_HelloWorld.cmd  compile_IShapeProfile.cmd  compile_ImportedTypes.cmd  compile_OperatorOverloading.cmd  compile_PrimitiveVariableTypes.cmd  compile_RALChecker.cmd  compile_ReferenceTypes.cmd  compile_TrafficLight.cmd  compile_TuringMachineSimulator.cmd  compile_Vector4d.cmd
